
[project]
name = "superagi"
version = "0.1.0"
description = "SuperAGI - Open Source Autonomous AI Agent Framework"
readme = "README.MD"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]
include = ["superagi*"]

[tool.setuptools.package-data]
superagi = ["**/*.txt", "**/*.yaml", "**/*.yml", "**/*.json", "**/*.gbnf"]
